# PARAGON

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.py
.github/workflows/: cpp-tests.yml  python-tests.yml
benchmark/: benchmark_connected_components.cpp  benchmark_pagerank.cpp  benchmark_sssp.cpp  benchmark_triangle_count.cpp  benchmark_utils.hpp
bindings/: auto_bindings.cpp  bindings.cpp  engine_bindings.cpp  graph_binidngs.cpp
docs/: README.MD  benchmarks.md  commands.md  conf.py  index.rst  pagerank.md  requirements.txt  structure.md
docs/source/: benchmarks.rst  conf.py  getting_started.rst  index.rst  install.rst
docs/source/changes/: index.rst  v0.1.11.rst
docs/source/python_package/: index.rst  python_api.rst  supported_python_datastructures.rst
docs/source/tutorials/: graph_api_interface.rst  index.rst  intro_to_graphs.rst  weighted_graph_api_interface.rst
docs/source/tutorials/algorithms/: index.rst  pagerank.rst  parallel_bfs.rst  parallel_connected_components.rst  parallel_dfs.rst  sssp.rst  triangle_count.rst
examples/: bfs.cpp  connected_components.cpp  dfs.cpp  graph_test.cpp  pagerank.cpp  parallel_pagerank_bfs.cpp  sssp.cpp  triangle_count.cpp
include/: bfs.hpp  connected_components.hpp  dfs.hpp  engine.hpp  graph.hpp  pagerank.hpp  parallel_bfs.hpp  parallel_dfs.hpp  sssp.hpp  triangle_count.hpp
python/paragon/: __init__.py  core.py  graphs.py
python/paragon/algorithms/: __init__.py  pagerank.py  parallel_bfs.py  parallel_connected_components.py  parallel_dfs.py  sssp.py  triangle_count.py
python/tests/algorithm/: test_parallel_bfs.py  test_parallel_connected_components.py  test_parallel_dfs.py  test_parallel_pagerank.py  test_parallel_pagerank_bfs.py  test_sssp.py  test_triangle_count.py
python/tests/core/: test_graph.py  test_weighted_graph.py
python/tests/graphs/: test_generate_normal_graph.py  test_generate_normal_weighted_graph.py
scripts/: build_cpp.sh  release.py
src/: connected_components.cpp  pagerank.cpp  parallel_bfs.cpp  parallel_dfs.cpp  sssp.cpp  triangle_count.cpp
tests/: run_tests.cpp  test_connected_components.cpp  test_engine.cpp  test_framework.hpp  test_graph.cpp  test_graph_basic.cpp  test_graph_build.cpp  test_graph_edges.cpp  test_pagerank.cpp  test_parallel_bfs.cpp  test_parallel_dfs.cpp  test_parallel_pagerank_bfs.cpp  test_registry.hpp  test_sssp.cpp  test_triangle_count.cpp  test_weighted_graph.cpp
